# XRoutR

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Makefile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-lint-test.yml  gitleaks.yml  openapi-types.yml  sbom-licenses.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/exporters/: datev_stub.py
backend/app/models/: canonical.py
backend/app/tasks/: route_stub.py  validate_stub.py
backend/app/validation/: rules_engine.py  schematron.py  schematron_stub.py  svrl_parser.py  svrl_parser_stub.py  validators.py  xml_schema.py  xml_schema_stub.py  xml_utils.py
backend/tests/: test_api_validation.py  test_goldens_rules.py  test_health.py  test_idempotency.py  test_models_canonical.py  test_openapi_export.py  test_perf_bench.py  test_performance.py  test_rules_engine.py  test_xml_schema.py  test_xml_security.py
docs/: README.md  index.md  mkdocs.yml
docs/ADR/: 0001-architecture.md  README.md
docs/compliance/: AV-TOMs.md
docs/operations/: slo-error-taxonomy.md
fixtures/: README.md
frontend/: README.md  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  (+1 more)
infra/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
scripts/: README.md  dev_check_env.py  openapi_export.py  schematron_runner_stub.py
shared/: README.md  canonical_invoice.schema.json  openapi.json  rules_catalog.yaml  standards.lock.json
(+22 files in other folders)
